--- a/style.css
+++ b/style.css
@@ -4,3 +4,17 @@
 .our-services.servic-padding{
     padding-top: 40px;
 }
+.logo{
+    max-width:10rem;
+}
+/* Estilos de about */
+.preloader .preloader-img {
+    padding-top: 0px;
+}
+.preloader .preloader-img img {
+    max-width: 100px;
+}
+
+.favourite-place .single-place .place-img img {
+    max-height: 253px;
+}
