--- a/style.css
+++ b/style.css
@@ -29,3 +29,18 @@
     gap: 10px;
     filter: invert(1);
 }
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* Proporción de aspecto 16:9 (500/1200) */
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
