--- a/stylepasadias.css
+++ b/stylepasadias.css
@@ -79,7 +79,12 @@
     & .description {
       line-height: 1.7;
       margin: 1rem 0 1.5rem;
-      font-size: 0.8rem;
+      font-size: 1.2rem;
+      color: white;
+      font-weight: 700;
+      background-color: rgba(0, 0, 0, 0.5);
+      
+      
     }
   
     & button {
